Fixed the issue on small screens it would let you scroll to the right

--- a/static/style.css
+++ b/static/style.css
@@ -6,7 +6,6 @@
 body {
   background-color: #000000;
   color: #dd7016;
-  width: 100%;
   height: 100%;
 }
 
@@ -121,7 +120,7 @@ html {
     width: 100%;
     padding-bottom: 54%;
     margin-left: 88%;
-    border-left: 5px solid blue;
+    border-left: 5px solid #0000ff;
     color: white;
 }
 
